<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.introtoandroid.stockquotes_bundy.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:text="@string/goButtonTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:id="@+id/button"
         />

    <TextView
        android:text="@string/weekRangeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@+id/changeTV"
        android:layout_alignEnd="@+id/changeTV"
        android:layout_marginTop="26dp"
        android:id="@+id/weekTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/changeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTV"
        android:textStyle="bold"
        android:layout_below="@+id/lttTV"
        android:layout_alignEnd="@+id/lttTV"
        android:layout_marginTop="19dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/lastTradeTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:id="@+id/lttTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/ltpTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp" />

    <TextView
        android:text="@string/lastTradePriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        android:id="@+id/ltpTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/nameTV"
        android:layout_alignStart="@+id/lttTV" />

    <TextView
        android:text="@string/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:id="@+id/nameTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/symbolTV"
        android:layout_alignEnd="@+id/ltpTV" />

    <TextView
        android:text="@string/symbolTxt"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/symbolTV"
        android:layout_marginTop="17dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/nameTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterStockTvTxt"
        android:textStyle="italic"
        android:id="@+id/enterTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_above="@+id/symbolTV"
        android:layout_alignEnd="@+id/symbolTV" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ltpTV"
        android:id="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignBaseline="@+id/symbolTV"
        android:layout_alignBottom="@+id/symbolTV"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignBaseline="@+id/lttTV"
        android:layout_alignBottom="@+id/lttTV"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignBaseline="@+id/ltpTV"
        android:layout_alignBottom="@+id/ltpTV"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignBaseline="@+id/changeTV"
        android:layout_alignBottom="@+id/changeTV"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weekTV"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/empty"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/recent"
        android:layout_centerHorizontal="true"
        android:id="@+id/one" />

    <TextView
        android:text="TextView"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/two"
        android:layout_marginTop="14dp"
        android:id="@+id/four"
        android:visibility="invisible" />

    <TextView
        android:text="@string/recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recent"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/empty"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:layout_alignBaseline="@+id/two"
        android:layout_alignBottom="@+id/two"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/empty"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:layout_alignBaseline="@+id/one"
        android:layout_alignBottom="@+id/one"
        android:layout_toEndOf="@+id/button" />

</RelativeLayout>
